# airas-20251117-071745-diffusion-model-impr-a

./: pyproject.toml
.research/: research_history.json
.research/latex/agents4science_2025/: paper.tex  references.bib
.research/prompt/analytic_subgraph/: analytic_node.txt
.research/prompt/create_bibfile_subgraph/: filter_references.txt
.research/prompt/create_code_subgraph/: derive_specific_experiments_exp-1-main-ablation.txt  derive_specific_experiments_exp-2-generalisation-robustness.txt  generate_base_code.txt  validate_base_code.txt  validate_experiment_code_exp-1-main-ablation.txt  validate_experiment_code_exp-2-generalisation-robustness.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_strategy.txt  generate_experiments.txt
.research/prompt/create_method_subgraph_v2/: evaluate_novelty_and_significance.txt  generate_idea_and_research_summary.txt
.research/prompt/evaluate_experimental_consistency_subgraph/: evaluate_experimental_consistency_exp-1-main-ablation.txt  evaluate_experimental_consistency_exp-2-generalisation-robustness.txt
.research/prompt/extract_reference_titles_subgraph/: extract_reference_titles_0.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
.research/prompt/latex_subgraph/: convert_to_latex_str.txt
.research/prompt/review_paper_subgraph/: review_paper.txt
.research/prompt/summarize_paper_subgraph/: summarize_paper_0.txt  summarize_paper_1.txt
config/: full_experiment.yaml  smoke_test.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
